--- a/home.html
+++ b/home.html
@@ -134,12 +134,12 @@
         </div>
         <div class="content col-span-4 space-y-5">
             <div>
-                <a href="" class="hover:underline text-3xl font-bold">Designing Dashboards</a>
+                <a href="" class="hover:underline text-3xl font-bold">Vibrant Portraits of 2020</a>
 
             </div>
             <div class="flex space-x-10 text-xl">
                 <span class="border-2 rounded-full bg-black text-white px-4">2020</span>
-                <span class="text-[#8695A4]">Dashboard</span>
+                <span class="text-[#8695A4]">Illustration</span>
 
             </div>
             <p class="text-base">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
@@ -156,12 +156,12 @@
         </div>
         <div class="content col-span-4 space-y-5">
             <div>
-                <a href="" class="hover:underline text-3xl font-bold">Designing Dashboards</a>
+                <a href="" class="hover:underline text-3xl font-bold">36 Days of Malayalam type</a>
 
             </div>
             <div class="flex space-x-10 text-xl">
-                <span class="border-2 rounded-full bg-black text-white px-4">2020</span>
-                <span class="text-[#8695A4]">Dashboard</span>
+                <span class="border-2 rounded-full bg-black text-white px-4">2018</span>
+                <span class="text-[#8695A4]">Typography</span>
 
             </div>
             <p class="text-base">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
